<resources>
    <string name="app_name">Cupboard Inventory App</string>
    <string name="action_delete_all">Delete all products</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Price</string>
    <string name="product_image">Product image</string>
    <string name="product_quantity">Current quantity</string>
    <string name="order_from_supplier">Order from the supplier</string>
    <string name="empty_view_label">No products available</string>
    <string name="empty_view_label2">Go shopping!</string>
    <string name="edit_product">Edit product</string>
    <string name="add_product">Add product</string>
    <string name="explore">Select picture...</string>
    <string name="action_save">Save product</string>
    <string name="action_delete">Delete product</string>
    <string name="insert_product_failed">Error inserting product</string>
    <string name="insert_product_successful">Product inserted</string>
    <string name="update_product_failed">Error updating product</string>
    <string name="update_product_successful">Product updated</string>
    <string name="empty_view_title">There are not products in stock!</string>
    <string name="empty_view_subtitle">Select the + button to start adding some products to the inventary.</string>
    <string name="label_quantity">Quantity: </string>
    <string name="label_price">Price: </string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_product_failed">Error with deleting product.</string>
    <string name="delete_product_successful">Product deleted.</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="no_stock">This product is not in stock.</string>
    <string name="name_requiered">Product requires a name.</string>
    <string name="quantity_required">Product requires valid quantity</string>
    <string name="price_required">Product requires valid price</string>
    <string name="image_required">Product requires valid image</string>
    <string name="allowed_quantity_required">Quantity must be a positive number between 1 and 100.</string>
    <string name="mail_to">perlai.jarillo@gmail.com</string>
    <string name="mail_message">Dear Perla, please supplie the next:</string>
    <string name="products_supplie"> Product: </string>
    <string name="units_supplie"> Units: </string>
    <string name="mail_end">Thanks</string>
    <string name="mail_subject">Supplie order</string>
    <string name="sendin_email">Sending order...</string>
    <string name="title_inputDialog">How many units do you want to order?</string>
    <string name="delete_all_msg">Delete all products?</string>
    <string name="delete_products_failed">Error with deleting products.</string>
    <string name="delete_products_successful">All products deleted.</string>
    <string name="insertion_no_supported">Insertion is not supported for </string>
    <string name="failed_to_insert_row">Failed to insert row for </string>
    <string name="deletion_no_supported">Deletion is not supported for </string>
    <string name="updating_no_supported">Update is not supported for  </string>
</resources>
