<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout_editor"
        tools:context="com.example.android.cupboardinventoryapp.ProductEditorActivity">

        <ImageView
            android:id="@+id/product_img"
            android:layout_width="@dimen/size_img"
            android:layout_height="@dimen/size_img"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryLigth"
            android:contentDescription="@string/product_image"
            android:src="@drawable/ic_image" />

        <Button
            android:id="@+id/btn_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/explore" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/FieldStyle"
                android:hint="@string/product_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_product_price"
                style="@style/FieldStyle"
                android:hint="@string/product_price"
                android:inputType="numberDecimal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_quantity" />

                <Button
                    android:id="@+id/btn_minus"
                    style="@style/btn_style"
                    android:text="-" />

                <EditText
                    android:id="@+id/edit_product_quantity"
                    android:layout_width="@dimen/quantity_edittext_width"
                    android:layout_height="wrap_content"
                    android:hint="0"
                    android:inputType="number" />

                <Button
                    android:id="@+id/btn_plus"
                    style="@style/btn_style"
                    android:text="+" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_order"
                style="@style/btn_style"
                android:layout_gravity="right"
                android:background="@color/colorQuantity"
                android:contentDescription="@string/order_from_supplier"
                android:src="@drawable/ic_add_shopping_cart_white_24dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>